gccida/c0/output_fp_compare
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_fp_compare/src/i386.c:7145:34: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
mask = ( 8 * eflags_p) | ( 4 * ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)operands[1])] == MODE_INT)) | ( 2 * unordered_p) | stack_top_dies; 
                                 ^~~~~~~~~~~~
                                 mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_fp_compare/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_fp_compare/src/i386.c:7148:7: error: use of undeclared identifier 'output_fp_compare_alt'
if ( !output_fp_compare_alt[mask] ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_fp_compare/src/i386.c:7150:8: error: use of undeclared identifier 'output_fp_compare_alt'
return output_fp_compare_alt[mask]; 
       ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_fp_compare/src/obj/i386.o] Error 1
